--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 
-<h1 style="font-size: calc(1.375rem + 1.5vw);">Random Word Generator</h1>
+<h1 style="font-size: calc(1.375rem + 1.5vw);">Random Name Generator</h1>
 
 
 <button class="button button1" type="button" onclick="changeParagraph()">Generate</button>
 
 
-<p id="first_name">A Paragraph</p>
+<p id="first_name">Random Names</p>
 </body>
 </html>
